--- a/scripts/bootstrap.sh.in
+++ b/scripts/bootstrap.sh.in
@@ -167,7 +167,7 @@ configure_yum_local_repositories() {
 
 configure_yum_local_repository() {
     local -r repo_name=$1 gpgcheck=${2:-0}
-    local -r repo_path=/srv/scality/metalk8s-@@VERSION/packages/$repo_name-el7
+    local -r repo_path=$(dirname "$(readlink -f "${BASH_SOURCE[0]}")")/packages/$repo_name-el7
     local gpg_keys
 
     gpg_keys=$(
@@ -196,16 +196,19 @@ install_salt_minion() {
 }
 
 configure_salt_minion_local_mode() {
+    local -r file_root=$(dirname "$(readlink -f "${BASH_SOURCE[0]}")")/salt
+    local -r pillar_root=$(dirname "$(readlink -f "${BASH_SOURCE[0]}")")/pillar
+
     "$SALT_CALL" --file-root=/srv/scality/metalk8s-@@VERSION/salt \
         --local --retcode-passthrough saltutil.sync_all
 
     cat > "${SALT_MINION_FILE_CLIENT_LOCAL_CONF}" << EOF
 file_roots:
   metalk8s-@@VERSION:
-    - /srv/scality/metalk8s-@@VERSION/salt
+    - $file_root
 pillar_roots:
   metalk8s-@@VERSION:
-    - /srv/scality/metalk8s-@@VERSION/pillar
+    - $pillar_root
 
 # use new module.run format
 use_superseded:
@@ -315,6 +318,16 @@ orchestrate_bootstrap() {
         "${SALT_CALL}" mine.update
 }
 
+prepare_archives () {
+    local -r file_root=$(dirname "$(readlink -f "${BASH_SOURCE[0]}")")/salt
+
+    "${SALT_CALL}" --file-root="$file_root" \
+        --local --state-output=mixed --retcode-passthrough state.sls \
+        saltenv=metalk8s-@@VERSION \
+        pillarenv=metalk8s-@@VERSION \
+        metalk8s.products
+}
+
 main() {
     run "Pre-minion system tests" pre_minion_checks
     run "Disabling Salt minion service" disable_salt_minion_service
@@ -322,6 +335,7 @@ main() {
     run "Configuring local YUM repositories" configure_yum_repositories
     run "Installing Salt minion" install_salt_minion
     run "Configuring Salt minion to run in local mode" configure_salt_minion_local_mode
+    run "Mount all metalk8s archives" prepare_archives
 
     orchestrate_bootstrap
 }
