tests: add a script to fix SSH config from Vagrant
By default, the IPs exported in the ssh-config by Vagrant are the local
ones of the hosts.
But during the tests, we need to access the control plane IPs.

To do so, we run a script to fix the IPs in the generated file before
running the tests.

Refs: #982
Signed-off-by: Sylvain Laperche <sylvain.laperche@scality.com>

--- a/tox.ini
+++ b/tox.ini
@@ -52,6 +52,7 @@ setenv =
     VAGRANT_CWD={toxinidir}
 commands_pre =
     - bash -c "vagrant ssh-config > {envdir}/vagrant_ssh_config"
+    - {toxinidir}/scripts/fix_vagrant_ssh_config.py {envdir}/vagrant_ssh_config
 commands =
     pytest \
          --ssh-config={env:SSH_CONFIG_FILE:{envdir}/vagrant_ssh_config} \
