--- a/ui/public/config.json
+++ b/ui/public/config.json
@@ -1,4 +1,5 @@
 {
     "url": "https://172.21.254.13:6443", 
-    "url_salt": "http://172.21.254.13:4507"
+    "url_salt": "http://172.21.254.13:4507",
+    "url_prometheus": "http://172.21.254.13:9090"
 }
