--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "formik": "1.5.1",
     "lodash": "4.17.11",
     "memoize-one": "^4.0.2",
+    "moment": "^2.24.0",
     "react": "^16.8.1",
     "react-debounce-input": "3.2.0",
     "react-dom": "^16.8.1",
